# rust-mcp-server-email

./: Cargo.toml
src/: main.rs
