[package]
name = "rust-mcp-server-email"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "tokio1-native-tls"] }
pulldown-cmark = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
